--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
     <link rel="stylesheet" href="vendor/font-awesome/font-awesome.css">
     <!--Link a mi estilo css-->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <!--Galerías Dinámicas CSS-->
-    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Exo+2:,400,500i|Exo:200i,400,500i,600,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    
+
+    <!--FOTORAMA-->
+
+<script type="text/javascript" src="vendor/jquery/jquery.js"></script> <!-- 33 KB -->
+<script type="text/javascript" src="vendor/jquery/fotorama.js"></script>
+<link href="vendor/jquery/fotorama.css" rel="stylesheet">
+
   </head>
   <body>
 
@@ -330,10 +336,8 @@
   Rocío Busacca - 2017 
 </footer>
 <!--Link a Jquery y  bootstrap.js -->
-<script  src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <script  src="vendor/bootstrap/bootstrap.js"></script>
-<script  src="js/functions.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+
 
 </div>
 </body>
