--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
      data-thumbheight="65"
      data-thumbwidth="100"
      >
-            <img src="img/fotografia/ananay/cc.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/aa.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/bb.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/dd.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/ff.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/gg.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/hh.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/1.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/2.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
-            <img src="img/fotografia/ananay/3.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/ff.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/cc.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/aa.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/bb.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/dd.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/gg.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/hh.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/ii.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/jj.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/kk.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/4.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
 
     
 
