--- a/index.html
+++ b/index.html
@@ -96,7 +96,31 @@
         <p>Fotografía de estudio / books / paisajes/ conceptual</p>
       </div>
   
-     <!-- Fotos Conceptual-->
+     <!-- Fotos ANANAY-->
+          <div class="col-md-12 cajita text-center">
+  <div class="text-center">
+    <h3>ANANAY - MODA TEJIDA</h3>
+  </div>
+
+
+  <div class="fotorama"
+     data-nav="thumbs"
+     data-thumbheight="65"
+     data-thumbwidth="100"
+     >
+            <img src="img/fotografia/ananay/ff.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/cc.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/aa.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/bb.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/dd.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/gg.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/hh.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/ii.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/jj.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/kk.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/fotografia/ananay/4.png" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+</div>
+</div>
 
 
              <div class="col-md-12 cajita text-center">
