--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
      data-nav="thumbs"
      data-thumbheight="64"
      data-thumbwidth="45">
-  <img src="img/visual/2.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/9.png" alt="Afiche de película Punch Drunk Love" class="img-responsive"  >
-  <img src="img/visual/1.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/3.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/4.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/5.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/7.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/6.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-  <img src="img/visual/8.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/6.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/7.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive"  >
+  <img src="img/visual/8.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/9.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  
 
 </div>
 </div>
