--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <img src="img/visual/7.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/8.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/9.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/6.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
 
 
 </div>
