--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      data-nav="thumbs"
      data-thumbheight="64"
      data-thumbwidth="45">
-  <img src="img/visual/1.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/6.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/2.png" alt="Afiche de película Punch Drunk Love" class="img-responsive"  >
   <img src="img/visual/3.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/4.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
