--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
      data-thumbheight="65"
      data-thumbwidth="100"
      >
-            <img src="img/fotografia/ananay/ff.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
+            <img src="img/visual/6.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/cc.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/aa.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/bb.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
