--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      data-nav="thumbs"
      data-thumbheight="64"
      data-thumbwidth="45">
-  <img src="img/visual/6.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/1.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/2.png" alt="Afiche de película Punch Drunk Love" class="img-responsive"  >
   <img src="img/visual/3.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/visual/4.png" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
@@ -110,7 +110,6 @@
      data-thumbheight="65"
      data-thumbwidth="100"
      >
-            <img src="img/visual/6.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/cc.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/aa.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
             <img src="img/fotografia/ananay/bb.jpg" alt="Ananay indumentaria al crochet" class="img-responsive"  >
