--- a/institucional.html
+++ b/institucional.html
@@ -217,7 +217,7 @@
                     <p>Filmación - Iluminación - Edición - Motion Graphics  </p>
 
 <video width="720" height="480" controls style="margin:0; text-align:center;">
-  <source src="img/institucional/videos/prp.mov" type="video/mp4">
+  <source src="img/institucional/videos/prp.mp4" type="video/mp4">
 
 </video>
         </div>
