--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
   
     </a>
 
-   <!--VISUAL--><a class="visualhome" href="visual.html" >
+    
+   <!--WEB--><a class="webhome" href="web.html">
    
     <div class="col-xs-12 col-md-6" style="padding:0;" >
     </div>
@@ -131,6 +132,7 @@
  
   </div>
   </div>
+
 
 </section><!--CAJA MAYOR-->
 
@@ -188,6 +190,16 @@
   </div>
   </div>
 
+    
+   <!--VISUAL--><a class="visualhome" href="visual.html" >
+   
+    <div class="col-xs-12 col-md-6" style="padding:0;" >
+    </div>
+  </a>
+
+ 
+  </div>
+  </div>
 </section><!--CAJA MAYOR-->
 
 
