--- a/editorial.html
+++ b/editorial.html
@@ -163,6 +163,54 @@
 
 
 
+<section class="editorial cajas" >
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-12 text-center">
+          <h1>Editorial</h1>
+          <h2>Retículas, el texto, el texto como forma, las mil formas del lectura</h2>
+        </div>
+</div> 
+</div>      
+
+        <div class="container-fluid"  style="padding-top: 5%;">
+    
+        <div class="row">
+
+    
+<div class="col-xs-12 col-md-12 text-center">
+
+<div class="fotorama"
+     data-nav="thumbs"
+     data-thumbheight="64"
+     data-thumbwidth="64"
+     style="padding: 2%;">
+
+
+
+<img src="img/editorial/magazine1.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+<img src="img/editorial/magazine2.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+ <img src="img/editorial/magazine3.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+<img src="img/editorial/magazine4.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+  </div>
+    </div>
+  </div>
+
+ <div class="col-xs-12 col-md-12 text-center">
+
+<video width="620" height="480" loop autoplay muted controls id="vid">
+ <source src="img/editorial/editorial-magazine.mp4" type="video/mp4">
+</video>
+ </div>
+
+      </div>
+    </div>
+
+
+
+
 
 </section>
 
