--- a/editorial.html
+++ b/editorial.html
@@ -159,6 +159,26 @@
       </div>
     </div>
 
+   
+<div class="col-xs-12 col-md-12 text-center">
+
+<div class="fotorama"
+     data-nav="thumbs"
+     data-thumbheight="64"
+     data-thumbwidth="64"
+     style="padding: 2%;">
+
+
+
+<img src="img/editorial/magazine5.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+<img src="img/editorial/magazine6.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+ <img src="img/editorial/magazine7.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+<img src="img/editorial/magazine8.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+  </div>
+    </div>
+  </div>
 
 
 
