--- a/institucional.html
+++ b/institucional.html
@@ -211,26 +211,13 @@
 
         </div>
 
-
-
- <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
-
-<p style="padding-top: 2%; color:black;>Video Publicitario para Redes Sociales </p>
-                    <p>Filmación - Iluminación - Edición - Motion Graphics  </p>
-
-<video width="320" height="320" controls style="margin:0; text-align:center;">
-  <source src="img/institucional/videos/publicidad.mp4" type="video/mp4">
-
-</video>
-        </div>
-
         <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
 
 <p style="padding-top: 2%; color:black;">Video Tutorial para curso online </p>
                     <p>Filmación - Iluminación - Edición - Motion Graphics  </p>
 
 <video width="720" height="480" controls style="margin:0; text-align:center;">
-  <source src="img/institucional/videos/prp.mp4" type="video/mp4">
+  <source src="img/institucional/videos/prp.mov" type="video/mp4">
 
 </video>
         </div>
@@ -238,6 +225,16 @@
 
     
 
+ <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
+
+<h4>Video Publicitario para Redes Sociales </h4>
+                    <p>Filmación - Iluminación - Edición - Motion Graphics  </p>
+
+<video width="320" height="320" controls style="margin:0; text-align:center;">
+  <source src="img/institucional/videos/publicidad.mp4" type="video/mp4">
+
+</video>
+        </div>
 
 </div> 
 </div>      
