--- a/institucional.html
+++ b/institucional.html
@@ -214,7 +214,7 @@
         
          <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
 
-<p style="padding-top: 2%; color:black;>Video Publicitario para Redes Sociales </p>
+<p>Video Publicitario para Redes Sociales </p>
                     <p>Filmación - Iluminación - Edición - Motion Graphics  </p>
 
 <video width="320" height="320" controls style="margin:0; text-align:center;">
