--- a/img/editorial.html
+++ b/img/editorial.html
@@ -147,17 +147,29 @@
 <img src="img/editorial/magazine4.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
   </div>
     </div>
+          
+          
+          <div class="col-xs-12 col-md-12 text-center">
+
+<div class="fotorama"
+     data-nav="thumbs"
+     data-thumbheight="64"
+     data-thumbwidth="64"
+     style="padding: 2%;">
+
+
+
+<img src="img/editorial/magazine5.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+<img src="img/editorial/magazine6.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+ <img src="img/editorial/magazine7.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+<img src="img/editorial/magazine8.jpg"  width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" ">
+  </div>
+    </div>
   </div>
 
- <div class="col-xs-12 col-md-12 text-center">
-
-<video width="620" height="480" loop autoplay muted controls id="vid">
- <source src="img/editorial/editorial-magazine.mp4" type="video/mp4">
-</video>
- </div>
-
-      </div>
-    </div>
+ 
 
 
 
