--- a/visual.html
+++ b/visual.html
@@ -117,7 +117,6 @@
       <div class="row">
         <div class="col-xs-12 col-md-12 text-center">
           <h1 >Audiovisual</h1>
-          <h2>Sumergirse entre imágenes cinéticas.</h2>
         </div>
 </div> 
 </div>      
@@ -130,13 +129,14 @@
         <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
 
 
-<p>Video Publicitario para Redes Sociales </p>
+          <p><span>Video Publicitario para Redes Sociales</span></p>
 <p>Filmación - Iluminación - Edición - Motion Graphics - Creatividad </p>
 
 <video width="720" height="480" controls style="margin:0; text-align:center;">
-  <source src="img/visual/spot-enfermeria.mp4" type="video/mp4">
+<source src="img/visual/spot-enfermeria.mp4" type="video/mp4">
 </video>
         </div>
+
 
           
           
