--- a/visual.html
+++ b/visual.html
@@ -239,7 +239,7 @@
 
 
 
- <div class="container-fluid"  style="padding-top: 5%;">
+ <div class="container-fluid"  style="padding-top: 2%;">
     
         <div class="row">
 
@@ -247,11 +247,9 @@
 
 <div class="col-xs-12 col-md-12 text-center">
 
-  <img src="img/visual/hologramas.gif" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/hologramas.gif" width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
 
-  <img src="img/visual/fractal.gif" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
-
-  <img src="img/visual/adn.gif" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/visual/adn.gif" width="320" height="240" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
 
 </div>
 
