--- a/visual.html
+++ b/visual.html
@@ -117,6 +117,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-12 text-center">
           <h1 >Audiovisual</h1>
+          <h2>Mundo Audiovisual, Imágenes cinéticas.</h2>
         </div>
 </div> 
 </div>      
