--- a/institucional.html
+++ b/institucional.html
@@ -138,7 +138,7 @@
      data-thumbwidth="64"
      style="padding: 2%;">
 
-  <img src="img/institucional/adelo.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/institucional/Adelo.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
 
 </div>
 </div>
