--- a/institucional.html
+++ b/institucional.html
@@ -156,7 +156,7 @@
 
 
      
- <div class="col-xs-12 col-md-12 text-center" style="margin-top: 5%;">
+ <div class="col-xs-12 col-md-12 text-center" style="margin-top: 2%;">
 
 
 <h2>RAPP Agency - Credenciales Laboratorios 2025 </h2>
@@ -174,8 +174,7 @@
 
 
         <div class="row">
-
-     <div class="col-xs-12 col-md-12 text-center">
+     <div class="col-xs-12 col-md-12 text-center" style="margin: 5%;">
           <h1> Diseño Gráfico </h1>
         </div>
         
@@ -187,7 +186,7 @@
      data-nav="thumbs"
      data-thumbheight="64"
      data-thumbwidth="64"
-      style="padding: 2%;">
+     style="margin: 5%;">
 
   <img src="img/institucional/institucional-ig7.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
   <img src="img/institucional/institucional-face0.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
