--- a/institucional.html
+++ b/institucional.html
@@ -159,7 +159,7 @@
  <div class="col-xs-12 col-md-12 text-center" style="margin-top: 2%;">
 
 
-<h2>RAPP Agency - Credenciales Laboratorios 2025 </h2>
+<h2 style="margin-top: 2%;">RAPP Agency - Credenciales Laboratorios 2025 </h2>
                     <p>Edición de Video - Motion Graphics - Diseño gráfico - Creatividad </p>
 
 <video width="960" height="540" controls style="margin:0; text-align:center;">
@@ -178,7 +178,7 @@
       <div class="row">
 
         
-          <h1> Diseño Gráfico </h1>
+          <h1 style="text-align:center;"> Diseño Gráfico </h1>
 
         
 <div class="col-xs-12 col-md-12 text-center">
