--- a/institucional.html
+++ b/institucional.html
@@ -162,7 +162,7 @@
 <h2 style="margin-top: 2%;">RAPP Agency - Credenciales Laboratorios 2025 </h2>
                     <p>Edición de Video - Motion Graphics - Diseño gráfico - Creatividad </p>
 
-<video width="960" height="540" controls style="margin:0; text-align:center;">
+<video width="960" height="540" controls style="margin:2%; text-align:center;">
   <source src="img/institucional/Video credenciales RAPP.mp4" type="video/mp4">
 </video>
 
