--- a/institucional.html
+++ b/institucional.html
@@ -178,7 +178,7 @@
       <div class="row">
 
         
-          <h1 style="text-align:center;"> Diseño Gráfico </h1>
+          <h1> Diseño Gráfico </h1>
 
         
 <div class="col-xs-12 col-md-12 text-center">
