--- a/institucional.html
+++ b/institucional.html
@@ -182,6 +182,9 @@
 
         
 <div class="col-xs-12 col-md-12 text-center">
+
+  <h2>Asociación Argentina del Ozono </h2>
+                    <p> RRSS </p>
 <div class="fotorama"
      data-nav="thumbs"
      data-thumbheight="64"
