--- a/institucional.html
+++ b/institucional.html
@@ -172,7 +172,9 @@
 </div> 
 </div>      
 
-        
+</section>
+
+        <section class="institucional cajas" >
 
  <div class="container">
       <div class="row">
