--- a/institucional.html
+++ b/institucional.html
@@ -180,8 +180,9 @@
       <div class="row">
 
         
+<div class="col-xs-12 col-md-12 text-center">
           <h1> Diseño Gráfico </h1>
-
+        </div>
         
 <div class="col-xs-12 col-md-12 text-center">
 
