--- a/institucional.html
+++ b/institucional.html
@@ -174,10 +174,9 @@
 
 </section>
 
-        <section class="institucional cajas" >
-
+<section class="institucional cajas" >
  <div class="container">
-      <div class="row">
+ <div class="row">
 
         
 <div class="col-xs-12 col-md-12 text-center">
@@ -206,7 +205,7 @@
           <div class="col-xs-12 col-md-12 text-center">
 
 
-  <img src="img/institucional/Adelo.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img  src="img/institucional/Adelo.jpg" style="margin: 2%;" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
 
 </div>
        
