--- a/institucional.html
+++ b/institucional.html
@@ -193,6 +193,22 @@
 </div>
 </div>
 
+<div class="col-xs-12 col-md-12 text-center">
+
+  <h2>Bagó</h2>
+                    <p> RRSS </p>
+<div class="fotorama"
+     data-nav="thumbs"
+     data-thumbheight="64"
+     data-thumbwidth="64"
+     style="margin: 2%;">
+  <img src="img/institucional/Sibo1.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/institucional/Sibo2.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/institucional/Sibo3.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+  <img src="img/institucional/Sibo4.jpg" alt="Afiche de película Punch Drunk Love" class="img-responsive" >
+
+</div>
+</div>
 
           <div class="col-xs-12 col-md-12 text-center">
 
